# WinOptPro

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RELEASING.md  THIRD_PARTY_NOTICES.txt  UPLIFT_PLAN.md  dev-error.txt  index.html  package-lock.json  package.json  patch1.js  patch2.js  patch3.js  playwright.config.ts  playwright.direct.config.ts  playwright.vm.config.ts  run-ci-tests.mjs  test-output.txt  test-results.json  tsc-errors.txt  tsc_errors.txt  tsconfig.json  tweak_list.json  vite.config.ts  vitest.config.ts
coverage/: coverage-final.json  index.html  lcov.info
docs/: EULA.md  FAQ.md  FEATURES.md  GUIDE_EXPERTS.md  GUIDE_GAMERS.md  GUIDE_NOOBS.md  LEGAL_CHECKLIST.md  PRIVACY_POLICY.md  SETUP_GUIDE.md  STEAM_SETUP.md  TROUBLESHOOTING.md  TWEAKS_REFERENCE.md
e2e/: app.spec.ts  features-direct.spec.ts  modules-comprehensive.spec.ts  network-optimizer.spec.ts  production-readiness.spec.ts  tweaks-lifecycle.spec.ts  vm-coverage-matrix.spec.ts  vm-tweak-direct.spec.ts
playwright-report/: index.html
src/: App.css  (+1 more)
src-tauri/: Cargo.toml  build_errors.txt  errors.txt  tauri.conf.json
src-tauri/bundle/nsis/: BRANDING_NOTES.md  installer.nsi  winopt-hardware-check.ps1
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  apps.rs  backup.rs  benchmark.rs  db.rs  drivers.rs  gaming.rs  gpu_driver.rs  latency.rs  lib.rs  main.rs  network.rs  power.rs  privacy.rs  process.rs  report.rs  scheduler.rs  security.rs  startup.rs  storage.rs  system.rs  tweaks.rs  update.rs  wsl.rs
(+281 files in other folders)
